--- a/ECSE429_Project_B/pom.xml
+++ b/ECSE429_Project_B/pom.xml
@@ -88,6 +88,15 @@
             <version>3.14.0</version>
         </dependency>
 
+        <!-- JSON support for RestAssured -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.2</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
     <!-- ====================== -->
